--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,20 @@
-node_modules
-package-lock.json
-backup.js
+# Dependency directories
+node_modules/
+
+# Build directories
+dist/
+build/
+
+# Environment variables
 .env
+
+# Logs
+logs/
+*.log
+
+# OS generated files
+.DS_Store
+
+# IDE specific files
+.vscode/
+.idea/
