--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,4 @@
-# Dependency directories
-node_modules/
-
-# Build directories
-dist/
-build/
-
-# Environment variables
+node_modules
+package-lock.json
+backup.js
 .env
-
-# Logs
-logs/
-*.log
-
-# OS generated files
-.DS_Store
-
-# IDE specific files
-.vscode/
-.idea/
